welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: not found: value n
  if (n<= 20 && n >=10){return true}
      ^in1020:2: error: not found: value n
  if (n<= 20 && n >=10){return true}
                ^